# erp-shared-backend

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
shared/: __init__.py
shared/db/: init_db.py
shared/enum/: order.py
shared/error/: handlers.py
shared/functions/: api.py  dev.py  security.py
shared/schemas/: api.py  cart.py  order.py  product.py  user.py
shared/schemas/auth/: authentication.py  permissions.py  roles.py  user.py
