[tool.poetry]
name = "erp-shared"
version = "0.1.0"
description = "Paquete compartido entre microservicios del ERP"
authors = ["captainsparrow10 <javier1009rm@gmail.com>"]
readme = "README.md"
packages = [{ include = "shared" }]
license = "MIT"
keywords = ["erp", "shared", "microservices", "schemas", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
homepage = "https://github.com/captainsparrow10/erp-shared-backend"
repository = "https://github.com/captainsparrow10/erp-shared-backend"
documentation = "https://github.com/captainsparrow10/erp-shared-backend#readme"

[tool.poetry.dependencies]
# Expandimos compatibilidad a Python 3.11+ para alinear con api-gateway
python = ">=3.11,<4.0"
pydantic = ">=2.11.0,<3.0.0"
email-validator = ">=2.2.0,<3.0.0"
python-jose = { version = ">=3.4.0,<4.0.0", extras = ["cryptography"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^5.0.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=shared --cov-report=term-missing --cov-report=html"